relative paths and "/" deletion

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <div class="grid">
     <!-- Course details -->
     <section id="course">
-      <div class="markdown" id="course-details" data-src="/course.txt"></div>
+      <div class="markdown" id="course-details" data-src="course.txt"></div>
     </section>
 
     <!-- Docs -->
     <section>
-      <div class="markdown" id="unit-markdown" data-src="/units.txt"></div>
+      <div class="markdown" id="unit-markdown" data-src="units.txt"></div>
     </section>
 
     <!-- Extra -->
     <section>
-      <div class="markdown" id="docs-markdown" data-src="/docs.txt"></div>
+      <div class="markdown" id="docs-markdown" data-src="docs.txt"></div>
     </section>
 
     <!-- Announcements-->
    <section>
-      <div class="markdown" id="other-markdown" data-src="/other.txt"></div>
+      <div class="markdown" id="other-markdown" data-src="other.txt"></div>
    </section>
   </div>
 
