dumb footer delete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <footer>
-    Updated <span id="y"></span>
+    <!-- Updated <span id="y"></span> -->
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
